--- a/some.html
+++ b/some.html
@@ -21,7 +21,7 @@
     <header>
       <div class="header-left">
         <div class="logo">
-          <img src="1.png" alt="logo">
+          <a href="contact.html"><img src="1.png" alt="logo"></a>
         </div>
         <nav>
           <ul>
